# memorybench

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: ADR-001-chromadb-over-pinecone.md  ADR-002-judge-model-selection.md
experiments/: plot_results.py  run_matrix.py  run_single.py
memorybench/: config.py
memorybench/agent/: agent.py  token_budget.py
memorybench/eval/: benchmark.py  datasets.py  drift.py  metrics.py
memorybench/memory/: episodic_store.py  forgetting.py  summarizer.py
tests/: test_memory.py
