[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memorybench"]

[project]
name = "memorybench"
version = "0.1.0"
description = "Benchmarking memory compression and forgetting policies in LLM agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "chromadb>=0.5.0",
    "tiktoken>=0.7.0",
    "structlog>=24.1.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "pydantic-settings>=2.3.0",
    "pandas>=2.2.0",
    "tenacity>=8.3.0",     # retry logic for API calls
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",         # readable CLI output
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",          # linter + formatter (replaces black + flake8)
    "mypy>=1.10.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.22.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]  # pycodestyle, pyflakes, isort, pep8-naming, pyupgrade

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=memorybench --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true